--- a/IMC/IMC/app/src/main/res/layout/activity_imcresultado.xml
+++ b/IMC/IMC/app/src/main/res/layout/activity_imcresultado.xml
@@ -7,28 +7,117 @@
     tools:context=".IMCResultado">
 
     <TextView
-        android:id="@+id/TextviewResultadoIMC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Resultado"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="31dp" />
-
-    <TextView
         android:id="@+id/tvResultadoIMC"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="60dp"
+        android:text="IMC:"
         android:textColor="#D32727"
         android:textSize="34sp"
-        tools:layout_editor_absoluteX="118dp"
-        tools:layout_editor_absoluteY="169dp" />
+        app:layout_constraintEnd_toStartOf="@+id/valorIMC"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/labelResultadoAltura" />
+
+    <TextView
+        android:id="@+id/valorIMC"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:text="."
+        android:textColor="#D32727"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/tvResultadoIMC"
+        app:layout_constraintTop_toTopOf="@+id/tvResultadoIMC" />
+
+    <TextView
+        android:id="@+id/labelResultadoPeso"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:layout_weight="1"
+        android:text="Peso:"
+        app:layout_constraintBottom_toTopOf="@+id/labelResultadoAltura"
+        app:layout_constraintEnd_toStartOf="@+id/labelRPeso"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/labelNome" />
+
+    <TextView
+        android:id="@+id/labelRPeso"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:layout_weight="1"
+        android:text="."
+        app:layout_constraintBottom_toTopOf="@+id/labelRAltura"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/labelResultadoPeso"
+        app:layout_constraintTop_toTopOf="@+id/labelResultadoPeso" />
+
+    <TextView
+        android:id="@+id/labelResultadoAltura"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:layout_weight="1"
+        android:text="Altura:"
+        app:layout_constraintBottom_toTopOf="@+id/tvResultadoIMC"
+        app:layout_constraintEnd_toStartOf="@+id/labelRAltura"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/labelResultadoPeso" />
+
+    <TextView
+        android:id="@+id/labelRAltura"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="."
+        app:layout_constraintBottom_toTopOf="@+id/valorIMC"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/labelResultadoAltura"
+        app:layout_constraintTop_toTopOf="@+id/labelResultadoAltura"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/labelNome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="68dp"
+        android:text="Nome:"
+        app:layout_constraintBottom_toTopOf="@+id/labelResultadoPeso"
+        app:layout_constraintEnd_toStartOf="@+id/labelRNome"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/labelRNome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/labelNome"
+        app:layout_constraintTop_toTopOf="@+id/labelNome" />
 
     <ImageView
         android:id="@+id/ImageViewResultado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/perfil"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="277dp" />
+        android:layout_width="237dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="157dp"
+        android:layout_marginBottom="120dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvResultadoIMC"
+        app:srcCompat="@drawable/perfil" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
