--- a/IMC/IMC/app/src/main/res/layout/activity_main.xml
+++ b/IMC/IMC/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="IMC"
-        android:textSize="96sp" />
+        android:text="Calculadora IMC"
+        android:textSize="14sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/labelName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Nome" />
+
+        <EditText
+            android:id="@+id/edName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="text" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -69,10 +91,18 @@
         android:textColorHighlight="#AA9C9C"
         android:textColorLink="#C1A2A2" />
 
+    <TextView
+        android:id="@+id/labelResultado"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:text="IMC:" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="600px"
+        android:layout_weight="0"
         app:srcCompat="@drawable/perfil"
         tools:srcCompat="@drawable/perfil" />
 
