Atualização da listagem(Não concluida)

--- a/ListView/ListView2/app/src/main/res/layout/item_lista.xml
+++ b/ListView/ListView2/app/src/main/res/layout/item_lista.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/imageViewlista"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textViewNome"
         tools:layout_editor_absoluteY="48dp" />
@@ -26,7 +26,7 @@
         tools:layout_editor_absoluteY="66dp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewlista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
